--- a/BootstrapJqueryValidate/Views/Shared/_Layout.cshtml
+++ b/BootstrapJqueryValidate/Views/Shared/_Layout.cshtml
@@ -26,6 +26,7 @@
                     <li>@Html.ActionLink("關於", "About", "Home")</li>
                     <li>@Html.ActionLink("連絡方式", "Contact", "Home")</li>
                     <li>@Html.ActionLink("筆記本", "Index", "Note")</li>
+                    <li>@Html.ActionLink("Web Demo", "Index", "Demo")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
