--- a/BootstrapJqueryValidate/Views/Demo/GetList.cshtml
+++ b/BootstrapJqueryValidate/Views/Demo/GetList.cshtml
@@ -1,6 +1,38 @@
 ﻿@model BootstrapJqueryValidate.Models.DemoViewModels
 
-@foreach (var item in Model.GetList)
-{
-    @item.Title <hr />
-}
+<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+    @foreach (var item in Model.GetList)
+    {
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#@item.RecId">@item.Title</a>
+                </h3>
+            </div>
+            <div id="@item.RecId" class="panel-collapse collapse">
+                <div class="panel-body">
+                    <table class="table table-condensed table-hover">
+                        <thead>
+                            <tr><td style="width:80%;">內容</td><td style="width:20%;">發表人</td></tr>
+                        </thead>
+                        <tbody>
+                            <tr><td>@item.Content</td><td>@item.CreateUser</td></tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    }
+</div>
+<hr />
+<div class="list-group">
+    @foreach (var item in Model.GetList)
+    {
+        <a href="#" class="list-group-item">
+            <h4 class="list-group-item-heading">@item.Title</h4><span class="label label-default">@item.CreateUser</span>
+            <p class="list-group-item-text">@item.Content </p>
+        </a>
+    }
+</div>
+
+
