--- a/BootstrapJqueryValidate/Views/Demo/Index.cshtml
+++ b/BootstrapJqueryValidate/Views/Demo/Index.cshtml
@@ -8,7 +8,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-12">
-            <div id="myCarousel" class="carousel slide" style="height:400px;">
+            <div id="myCarousel" class="carousel slide" style="height:400px;" data-wrap="false">
 
                 <ol class="carousel-indicators">
                     <li data-target="#myCarousel" data-slide-to="0" style="background-color:blue;" class="active"></li>
@@ -16,8 +16,8 @@
                 </ol>
 
                 <div class="carousel-inner">
-                    <div class="item active">
-                        <div class="panel panel-default">
+                    <div class="item active  center-block" style="width:100%;">
+                        <div class="panel panel-default" style="width:50%;margin:auto;">
                             <div class="panel-heading">
                                 Table Example Demo
                             </div>
@@ -37,11 +37,13 @@
                     </div>
 
                     <div class="item" style="height:400px;">
-                        <img src="https://cask.scotch.io/2015/08/Screen-Shot-2015-08-24-at-2.51.21-PM.png" class="img-responsive img-thumbnail" alt="Responsive image">
+                        <div style="text-align:center; width:80%;margin:auto;">
+                            <img src="https://cask.scotch.io/2015/08/Screen-Shot-2015-08-24-at-2.51.21-PM.png" class="img-responsive img-thumbnail" alt="Responsive image">
+                        </div>
                     </div>
                 </div>
 
-                <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+                <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev" style="width:5%;">
                     <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
                     <span class="sr-only">Previous</span>
                 </a>
@@ -100,70 +102,96 @@
     @Scripts.Render("~/bundles/jqueryval")
 
     <script type="text/javascript">
+        $.validator.setDefaults({
+            submitHandler: function () {
+                DemoAdd();
+                $("form").trigger("reset");
+                return false;
+            }
+        });
+
         $(function () {
             $('#myCarousel').carousel({
-                interval: 2000
+                interval: 3000
             })
             $.validator.addClassRules({
                 "validate-require": { required: true }
             });
             $("[data-toggle='tooltip']").tooltip();
-            //
-            
 
 
-            $(document).on("click", "#demoForm .submit", function (e) {
-                $("#demoForm").validate({
-                    errorClass: "invalid",
-                    rules: {
-                        title: {
-                            rangelength: [3, 20]
-                        },
-                        content: {
-                            maxlength: 100,
-                            minlength: 3
-                        },
-                        user: {
-                            maxlength: 10,
-                            minlength: 3
-                        }
+            $("#myModal .modal-body").html("Add Data Fail");
+
+            $("#demoForm").validate({
+                errorClass: "invalid",
+                //debug:true,
+                rules: {
+                    title: {
+                        rangelength: [3, 20]
                     },
-                    messages: {
-                        user: { minlength: "不可小於3個字" },
-                        title: { rangelength: "標題介於3~20個字元" }
+                    content: {
+                        maxlength: 100,
+                        minlength: 3
                     },
-                    showErrors: function (errorMap, errorList) {
-                        $("#DemoAdd .alert > strong").html("Your form contains " + this.numberOfInvalids() + " errors,see details below.");
-                        $("#DemoAdd .alert").show();
-                        this.defaultShowErrors();
-                    },
-                    submitHandler: function () {
-                        $("#DemoAdd .alert").hide();
-
-                        if ($('#addShowMessage').is(":checked")) {
-                            $("#myModal .modal-body").html("Validate Finish");
-                            $('#myModal').modal({
-                                keyboard: false,
-                                backdrop: false
-                            })
-                            //$('#myModal').data('.modal-backdrop').addClass('background-backdrop');
-                            
-                            $('.modal-backdrop').addClass('background-backdrop');
-                            $("#myModal").modal('show');
-                        }
-
-                        //$("#demoForm").reset();
-
-                        //$("form").submit(function (e) {
-                        //    alert("Submitted");
-                        //});
+                    CreateUser: {
+                        maxlength: 10,
+                        minlength: 3
                     }
-                });
-
-                
-                //$("#demoForm").submit();
+                },
+                messages: {
+                    user: { minlength: "不可小於3個字" },
+                    title: { rangelength: "標題介於3~20個字元" }
+                },
+                showErrors: function (errorMap, errorList) {
+                    var num = this.numberOfInvalids();
+                    if (num > 0) {
+                        $("#addForm .alert > strong").html("Your form contains " + num + " errors,see details below.");
+                        $("#addForm .alert").show();
+                    }
+                    else {
+                        $("#addForm .alert").hide();
+                    }
+                    
+                    this.defaultShowErrors();
+                }
             });
+
         })
+
+        function DemoAdd()
+        {
+            var data = $("#demoForm").serialize();
+            $.ajax({
+                url: '@Url.Action("Add", "Demo")',
+                type: 'POST',
+                cache: false,
+                async: false,
+                contentType: 'application/x-www-form-urlencoded; charset=UTF-8',
+                data: data,
+                success: function (result) {
+                    if (result == "") {
+                        $("#myModal .modal-body").html("Add Data Success");
+                    }
+                    else {
+                        $("#myModal .modal-body").html("Add Data Fail");
+                    }
+
+                    if ($("#demoForm :checkbox").is(":checked")) {
+                        $('#myModal').modal({
+                            keyboard: false,
+                            backdrop: false
+                        })
+                        //$('#myModal').data('.modal-backdrop').addClass('background-backdrop');
+
+                        //$('.modal-backdrop').addClass('background-backdrop');
+                        //$("#myModal").modal('show');
+                    }
+                },
+                error: function () {
+
+                }
+            });
+        }
     </script>
 }
 
